--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 	<body>
 		<header>
-			<h1 class="text-center">Can you name the flag?</h1>
-			<p class="text-center">Click on the flag to reveal the answer</p>
+			<h1>Can you name the flag?</h1>
+			<p>Click on the flag to reveal the answer</p>
 		</header>
 
 		<div class="container">
