--- a/index.html
+++ b/index.html
@@ -5,7 +5,30 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Name the flag</title>
+		<meta name="description" content="Can you name the flag? Click on the flag to reveal the answer" />
+
 		<link rel="stylesheet" href="style.css" />
+
+		<link rel="manifest" href="favicon/manifest.json" />
+
+		<meta name="mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="application-name" content="Name the flag" />
+		<meta name="apple-mobile-web-app-title" content="Name the flag" />
+		<meta name="theme-color" content="#14233c" />
+		<meta name="msapplication-navbutton-color" content="#14233c" />
+		<meta name="msapplication-TileColor" content="#14233c" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+		<meta name="msapplication-starturl" content="/" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
+		<link rel="icon" href="favicon/favicon.ico" />
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png" />
+		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png" />
+		<link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png" />
+		<link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#14233c" />
 	</head>
 
 	<body>
